src/main/java/com/example/springcore/di/Conflict/good/example1/config/AppConfig.java
package com.example.springcore.di.Conflict.good.example1.config;

import org.springframework.context.annotation.ComponentScan;
import org.springframework.context.annotation.Configuration;

@Configuration
@ComponentScan(basePackages = "com.example.springcore.di.Conflict.good.example1")
public class AppConfig {
}
